--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -13,6 +13,8 @@
 {{en-noun|-}}
 
 # {{context|archaic|lang=en}} an [[illegal]] [[blood sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
+#* '''2012''', Jan Bondeson, ''Amazing Dogs: A Cabinet of Canine Curiosities''
+#*: This was the pit for dog fights, cockfights and rat killing. {{...}} At a time when '''ratting''' was largely frowned upon by respectable people in Britain, it gained considerable support in France {{...}}
 # a [[legal]] [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 
 ===See also===
