--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 '''labourious'''
 
-# {{misspelling of|laborious|lang=en}}
+# UK & Canadian spelling of {{|laborious|lang=en}}
 
 [[es:labourious]]
 [[my:labourious]]
