--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -12,17 +12,17 @@
 ===Noun===
 {{en-noun|-}}
 
-# {{context|archaic|lang=en}} an [[illegal]] [[blood sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
+# {{context|archaic|lang=en}} The [[blood sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
 #* '''1993''', Ronald H. Fritze, ‎James Stuart Olson, ‎Randy Roberts, ''Reflections on World Civilization: A Reader'' (volume 2, page 102)
 #*: Henry Mayhew, the nineteenth-century chronicler of London's underworld, described the frenzied activity of one '''ratting''' contest. A terrier — the best of ratting dogs — was placed into a pit with 50 rats.
 #* '''2001''', Colin D. Howell, ''Blood, Sweat and Cheers: Sport and the Making of Modern Canada''
 #*: Bear and bull baiting, dog fights, cockfighting, ratting, and other blood sports were attacked as un-Christian {{...}}
 #* '''2012''', Jan Bondeson, ''Amazing Dogs: A Cabinet of Canine Curiosities''
 #*: This was the pit for dog fights, cockfights and rat killing. {{...}} At a time when '''ratting''' was largely frowned upon by respectable people in Britain, it gained considerable support in France {{...}}
-# a [[legal]] [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
+# A [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 
 ===See also===
-*[[rat-baiting]] - illegal activity
+* {{sense|blood sport}} [[rat-baiting]]
 
 ===Anagrams===
 * [[tarting#English|tarting]]
