--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -17,6 +17,8 @@
 #*: Henry Mayhew, the nineteenth-century chronicler of London's underworld, described the frenzied activity of one '''ratting''' contest. A terrier — the best of ratting dogs — was placed into a pit with 50 rats.
 #* '''2001''', Colin D. Howell, ''Blood, Sweat and Cheers: Sport and the Making of Modern Canada''
 #*: Bear and bull baiting, dog fights, cockfighting, '''ratting''', and other blood sports were attacked as un-Christian {{...}}
+#* '''2008''', Rob Boddice, ''A History of Attitudes and Behaviours Toward Animals in Eighteenth- and Nineteenth-Century Britain'' (page 257)
+#*: The RSPCA were well aware that '''ratting''' was legally ambiguous, and when they received a report of a conviction for ratting in Hull in 1868 they doubted the legality of it.
 #* '''2012''', Jan Bondeson, ''Amazing Dogs: A Cabinet of Canine Curiosities''
 #*: This was the pit for dog fights, cockfights and rat killing. {{...}} At a time when '''ratting''' was largely frowned upon by respectable people in Britain, it gained considerable support in France {{...}}
 # A [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
