--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -61,6 +61,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Lithuanian: {{t|lt|žebenkštis|m}}
 * Luxembourgish: {{t|lb|Wisel|n}}
 * Macedonian: {{t|mk|ласица|f|tr=lásica}}
+* Malay: {{t|ms|wesel}}
 * Mazanderani: {{t|mzn|لسک|tr=lesk|sc=fa-Arab}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Persian: {{t+|fa|راسو|tr=râsu|sc=fa-Arab}}
