--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -40,7 +40,7 @@
 
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
-* Finnish: {{t-check|fi|[[länsifriisi|länsifriisiläinen]] [[murre]]}} {{attention|fi|2=was "[[länsifriisi|länsifriisiläinen]] [[murre]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Finnish: {{t|fi|[[länsifriisiläinen]] [[murre]]}}
 * Italian: {{qualifier|ad hoc}} {{t-check|it|[[dialetto]] [[frisone]] [[occidentale]]}} {{attention|it|2=was "dialetto frisone occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
 {{trans-mid}}
 * Polish: {{t|pl|zachodniofryzyjski|m}}
