--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -55,6 +55,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Scottish Gaelic: {{t|gd|ge-tà}}
 * Spanish: {{t|es|no obstante}}
 * Swahili: {{t|sw|ijapokuwa}}, {{t|sw|hata hivyo}}
+* Swedish: {{t+|sv|dock}}
 * Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
 * Volapük: [[do#Volapük|do]]
 * Walloon: {{t+|wa|portant}}
@@ -101,6 +102,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Russian: {{t+|ru|хотя}}, {{t+|ru|хоть и}}, {{t|ru|несмотря на то, что}}
 * Slovak: {{t|sk|hoci}}
 * Spanish: {{t+|es|sin embargo}}, {{t|es|a pesar de}}
+* Swedish: {{t|sv|även om}}
 {{trans-bottom}}
 
 ===Statistics===
