--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -146,7 +146,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Old Church Slavonic: {{t|cu|вєшть|f|tr=veštĭ|sc=Cyrs}}
 * Old English: {{t|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
-* Polish: {{t+|pl|rzecz|f}}
+* Polish: {{t+|pl|rzecz|f}}, {{t+|pl|przedmiot|m}}
 * Portuguese: {{t+|pt|coisa|f}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f|tr=veščʹ|sc=Cyrl}}, {{t+|ru|нечто|n|tr=néčto|sc=Cyrl}}, {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
