--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -172,7 +172,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Rapa Nui: {{t|rap|puhi}}
 * Romanian: {{t|ro|sufla}}
 * Romansch: {{t|rm|sufflar}}, {{t|rm|buffar}}, {{t|rm|zuflar}}, {{t|rm|zufler}}, {{t|rm|bufar}}, {{t|rm|sofflar}}, {{t|rm|boffar}}
-* Russian: {{t+|ru|дуть|impf|tr=dutʹ}}, {{t+|ru|дунуть|pf|tr=dúnutʹ}}, {{t+|ru|подуть|pf|tr=podútʹ|sc=Cyrl}}, {{t+|ru|веять|impf|tr=véjatʹ|sc=Cyrl}}, {{t+|ru|повеять|pf|tr=povéjatʹ|sc=Cyrl}}, {{t+|ru|сморкаться|impf|tr=smorkátʹsja}}, {{t|ru|сморкнуться|tr=smorknútʹsja}} {{pf.}} ''blow the nose''
+* Russian: {{t+|ru|дуть|impf|tr=dutʹ}}, {{t+|ru|дунуть|pf|tr=dúnutʹ}}, {{t+|ru|подуть|pf|tr=podútʹ|sc=Cyrl}}, {{t+|ru|веять|impf|tr=véjatʹ|sc=Cyrl}}, {{t+|ru|повеять|pf|tr=povéjatʹ|sc=Cyrl}}, {{t+|ru|сморкаться|impf|tr=smorkátʹsja}}, {{t|ru|сморкнуться|tr=smorknútʹsja}} {{g|pf}} ''blow the nose''
 * Scottish Gaelic: {{t|gd|sèid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|дувати}} {{qualifier|Bosnian, Serbian}}, {{t|sh|духати}} {{qualifier|Croatian}}
