--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -171,9 +171,8 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 
 # [[me]]
 
-====Related terms====
-* {{l/sga|m-}} {{qualifier|class A infixed pronoun}}
-* {{l/sga|dom-}}, {{l/sga|dam-}} {{qualifier|class B & C infixed pronoun}}
+====See also====
+{{sga-affixed pronouns}}
 
 ====Derived terms====
 {{suffixsee|sga}}
