--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -9,6 +9,7 @@
 From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm}}, compare French {{term|avertissement||warning|lang=fr}}. See [[advertise]].
 
 ===Pronunciation===
+* {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}} (occasionally {{IPA|/ad.və.ˈtʌɪz.mənt/|lang=en}}/ in some regions)
 * {{audio|Advertisement.ogg|Audio (UK)|lang=en}}
 * {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/|lang=en}}
