--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -53,7 +53,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Albanian: {{t|sq|lepur i gropave}}
 * Arabic: {{t|ar|ارنب|m|alt=أرْنَب|tr='arnab}}
 * Armenian: {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
-* Aromanian: {{t-needed|rup}}
+* Aromanian: {{t|rup|lepuri}}
 * Asturian: {{t|ast|conexu|m}}
 * Azeri: {{t+|az|dovşan}}
 * Bashkir: {{t|ba|ҡуян|sc=Cyrl}}
