--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -6,10 +6,10 @@
 * {{audio|en-us-bind.ogg|Audio (US)|lang=en}}
 * {{rhymes|aɪnd|lang=en}}
 
-===Etymology 1===
-From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|bindan|lang=en}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bindaną}} (compare West Frisian {{term|bine|lang=fy}}, Dutch {{term|binden|lang=nl}}, Low German {{term|binnen|lang=nds}}, German {{term|binden|lang=de}}, Danish {{term|binde|lang=da}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to tie}} (compare Welsh {{term|benn||cart|lang=cy}}, Latin {{m|la|offendīx||knot, band}}, Lithuanian {{term|beñdras||partner|lang=lt}}, Albanian {{term|bend||servant,henchman|lang=sq}}, {{term|bind||to convince, persuade, tame|lang=sq}}, Ancient Greek {{term|πεῖσμα|tr=peisma||cable, rope|lang=grc}}, Sanskrit {{term|बध्नाति|tr=badhnāti|lang=sa}}).
+===Etymology===
+From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bindaną}} (compare West Frisian {{m|fy|bine}}, Dutch {{m|nl|binden}}, Low German {{m|nds|binnen}}, German {{m|de|binden}}, Danish {{m|da|binde}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to tie}} (compare Welsh {{m|cy|benn||cart}}, Latin {{m|la|offendīx||knot, band}}, Lithuanian {{m|lt|beñdras||partner}}, Albanian {{m|sq|bend||servant, henchman}}, {{m|sq|bind||to convince, persuade, tame}}, Ancient Greek {{m|grc|πεῖσμα||cable, rope}}, Sanskrit {{m|sa|बध्नाति}}).
 
-====Verb====
+===Verb===
 {{en-verb|binds|binding|bound|'''[[bound]]''' ''or rarely'' '''[[bounden]]'''}}
 
 # {{context|intransitive|lang=en}} To tie; to confine by any [[ligature]].
@@ -56,19 +56,19 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 #* '''2009''', Robert Pickering, ''Beginning F#'' (page 123)
 #*: You can '''bind''' an identifier to an object of a derived type, as you did earlier when you bound a string to an identifier of type <code>obj</code>{{...}}
 
-=====Synonyms=====
+====Synonyms====
 * {{sense|''transitive'' tie or fasten together}} [[fetter]], [[make fast]], [[tie]], [[fasten]], [[restrain]]
 * {{sense|''transitive'' cover with a bandage}} [[bandage]], [[dress]]
 * {{sense|''transitive'' oblige}} [[restrain]], [[restrict]], [[obligate]]
 * {{sense|''transitive, legal'' put under legal obligation}}
 * {{sense|''transitive, legal'' place under obligation to serve}} [[indenture]]
 
-=====Derived terms=====
+====Derived terms====
 * [[bind over]] - to put under bonds to do something, as to appear at court, to keep the peace, etc.
 * [[bind to]] - to contract; as, to bind one's self to a wife.
 * [[bind up in]] - to cause to be wholly engrossed with; to absorb in.
 
-=====Translations=====
+====Translations====
 {{trans-top|''transitive'' connect}}
 * Arabic: {{t|ar|ربط|tr=rabaṭa}}
 * Belarusian: {{t|be|вязаць|tr=vjazác’|sc=Cyrl}}
@@ -130,13 +130,10 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 * Vietnamese: {{t+|vi|buộc}}, {{t+|vi|cột}}, {{t+|vi|trói}}
 {{trans-bottom}}
 
-=====Derived terms=====
+====Derived terms====
 * [[bindweed]]
 
-===Etymology 2===
-From the above verb.
-
-====Noun====
+===Noun===
 {{en-noun}}
 
 # That which binds or ties.
@@ -146,7 +143,7 @@ From the above verb.
 # {{context|chess|lang=en}} A strong grip or [[stranglehold]] on a position that is difficult for the opponent to break.
 #: ''the Maróczy '''Bind'''''
 
-=====Synonyms=====
+====Synonyms====
 * See also [[Wikisaurus:difficult situation]]
 
 ===References===
@@ -154,7 +151,7 @@ From the above verb.
 * {{R:Webster 1913}}
 
 ===Anagrams===
-* [[INBD#English|INBD]]
+* {{l|en||INBD}}
 
 [[Category:English irregular verbs]]
 
