--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -60,6 +60,7 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 * Italian: {{t+|it|consumare}}
 * Norwegian: {{t|no|forbruke}}, {{t|no|bruke opp}}
 * Persian: {{t+|fa|مصرف کردن|sc=fa-Arab}}
+* Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|расходовать}}
 * Vietnamese: {{t+|vi|dùng}}, {{t+|vi|tiêu thụ}}
@@ -82,6 +83,7 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 * Latin: {{t|la|peredō}}
 * Norwegian: {{t+|no|fortære}}
 * Persian: {{t+|fa|مصرف کردن|sc=fa-Arab}}
+* Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|поедать}}
 * Vietnamese: {{t+|vi|ăn}}
@@ -108,6 +110,7 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 {{trans-mid}}
 * Italian: {{t+|it|consumare}}
 * Persian: {{t|fa|نابود شدن|sc=fa-Arab}}
+* Portuguese: {{t+|pt|consumir}}
 * Russian: {{t+|ru|поглощать}}
 * Vietnamese: {{t+|vi|tàn phá}}
 {{trans-bottom}}
