--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Japanese: {{t|ja|口笛|tr=くちぶえ, kuchibue}}
 {{trans-mid}}
 * Latvian: {{t|lv|svilpošana|f}}
-* Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}
+* Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}
 * Russian: {{t+|ru|свисток|m|tr=svistók}}, {{t+|ru|свист|m|tr=svist}}
 * Serbo-Croatian:
 *: Roman: {{t+|sh|zvižduk|m}}
