--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -8,8 +8,8 @@ From [[monetary]], from Latin [[monetarius]], from [[moneta#Latin|monēta]]
 ===Noun===
 {{en-noun|-}}
 
-# {{context|economics|lang=en}} The doctrine that [[economic]] systems are controlled by variations in the [[supply]] of [[money]]
-# {{context|economics|lang=en}} The [[political]] doctrine that a nation's [[economy]] can be controlled by regulating the money supply
+# {{context|economics|lang=en}} The doctrine that [[economic]] systems are controlled by variations in the [[supply]] of [[money]].
+# {{context|economics|lang=en}} The [[political]] doctrine that a nation's [[economy]] can be controlled by regulating the [[money supply]].
 
 ====Translations====
 {{trans-top}}
