--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -35,6 +35,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 
 ====Translations====
 {{trans-top|highest limit}}
+* Armenian: {{t|hy|ամենաբարձր|sc=Armn}}
 * Chinese:
 *: Mandarin: {{t+|cmn|最大|tr=zuìdà|sc=Hani}}, {{t+|cmn|極大|sc=Hani}}, {{t+|cmn|极大|tr=jídà|sc=Hani}}
 * Czech: {{t+|cs|maximum|n}}
