--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -11,10 +11,12 @@
 ====Translations====
 {{trans-top|sentence containing one independent clause and no dependent clause}}
 * Armenian: {{t|hy|պարզ նախադասություն|tr=parz naxadasut’yun}}
+* Chinese:
+*: Mandarin: {{t+|cmn|單句|sc=Hani}}, {{t+|cmn|单句|tr=dānjù|sc=Hani}}
 * French: {{t+|fr|phrase simple|f}}
 * German: {{t+|de|einfacher Satz|m}}, {{t+|de|Satzgefüge|n}}
-* Japanese: {{t|ja|単文|tr=tanbun|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|単文|tr=tanbun|sc=Jpan}}
 * Korean: {{t+|ko|단문|sc=Kore}}, {{t|ko|단순문|sc=Kore}}
 * Polish: {{t|pl|zdanie pojedyncze|n}}
 * Russian: {{t|ru|простое предложе́ние|n|sc=Cyrl}}
