--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -138,5 +138,6 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 [[fi:marten]]
 [[ta:marten]]
 [[te:marten]]
+[[tr:marten]]
 [[vi:marten]]
 [[zh:marten]]
