--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -67,6 +67,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Lithuanian: {{t+|lt|oda|f}}
 * Malayalam: {{t|ml|തോല്‍]]|tr=thOl}}
 * Mongolian: {{t|mn|савхи|tr=savkhi|sc=Cyrl}}
+* Navajo: {{t|nv|akał}}
 * Norwegian Bokmål: {{t|nb|lær|n}}
 * Ojibwe: {{t|oj|bashkwegin}}
 * Old Church Slavonic: {{t|cu|кожа|f|tr=koža|sc=Cyrs}}
