--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -176,6 +176,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-bottom}}
 
 {{trans-top|individual object or distinct entity}}
+* Asturian: {{t|ast|cosa|f}}
 * Finnish: {{t+|fi|esine}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -219,6 +220,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-bottom}}
 
 {{trans-top|that which matters; the crux}}
+* Asturian: {{t|ast|cosa|f}}
 * Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -239,7 +241,6 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * {{ttbc|ar}}:
 *: Egyptian Arabic: {{t|arz|حاجة|f|tr=Haaga|sc=Arab}}
 * Aromanian: {{t-check|rup|lucru}}
-* Asturian: {{t-check|ast|cosa|f}}
 * Avar: {{t-check|av|жо}}
 * Bengali: {{t-check|bn|বস্তু|sc=Beng}}
 * Breton: {{t+check|br|tra|f}}
