--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Cherokee: {{t-needed|chr}}
 * Chichewa: {{t-needed|ny}}
 * Chinese:
-*: Mandarin: {{t+|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì|sc=Hani}}
+*: Mandarin: {{t+|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì|sc=Hani}}, {{t+|cmn|簡易|sc=Hani}}, {{t+|cmn|简易|tr=jiǎnyì|sc=Hani}}
 * Corsican: {{t-needed|co}}
 * Czech: {{t+|cs|jednoduchý|m}}, {{t+|cs|prostý}}, {{t+|cs|lehký}} {{qualifier|easy}}
 * Danish: {{t-needed|da}}
