--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -160,6 +160,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 *: Roman: {{t+|sh|stvar|f}}, {{t+|sh|rič|f}} (Chakavian)
 * Slovak: {{t|sk|vec|f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t+|sl|reč|f}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|wěc|f}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: {{t+|sw|kitu|c7|c8}}, {{t+|sw|vitu|c8}}
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
