--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -162,6 +162,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Slovene: {{t+|sl|stvar|f}}, {{t+|sl|reč|f}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|wěc|f}}
+*: Upper Sorbian: {{t|hsb|wěc|f}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: {{t+|sw|kitu|c7|c8}}, {{t+|sw|vitu|c8}}
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
