--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -113,6 +113,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Malayalam: {{t+|ml|വിഭാഗം|tr=vibhaagam|sc=Mlym}}
 * Persian: {{t+|fa|بخش|tr=baxš|sc=fa-Arab}}
 * Portuguese: {{t+|pt|parte|f}}
+* Quechua: {{t|qu|t'aqa}}
 * Romanian: {{t+|ro|diviziune|f}}, {{t+|ro|parte|f}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * West Frisian: {{t|fy|ôfdieling|c}}
