--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -14,7 +14,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|[[吹噓]][[資本]]|sc=Hani}}, {{t|cmn|[[吹嘘]][[资本]]|tr=chuīxū zīběn|sc=Hani}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|kerskailuoikeudet|p}}
 {{trans-bottom}}
 
 [[ta:bragging rights]]
