--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -14,22 +14,22 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 {{en-adv|-}}
 
 #{{label|en|temporal location}} At that [[time]].
-#:{{usex|lang=en|He was happy '''then'''.}}
+#:{{ux|en|He was happy '''then'''.}}
 #*Bible, {{w|Book of Genesis|Genesis}} xii. 6
 #*:And the Canaanite was '''then''' in the land.
 #*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=1
 |passage=In the old days, to my commonplace and unobserving mind, he gave no evidences of genius whatsoever. He never read me any of his manuscripts,&nbsp;[&hellip;], and therefore my lack of detection of his promise may in some degree be pardoned. But he had '''then''' none of the oddities and mannerisms which I hold to be inseparable from genius, and which struck my attention in after days when I came in contact with the Celebrity.}}
 #{{label|en|temporal location}} Soon afterward.
-#:{{usex|lang=en|He fixed it, '''then''' left.}}
-#:{{usex|lang=en|Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.}}
+#:{{ux|en|He fixed it, '''then''' left.}}
+#:{{ux|en|Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.}}
 #*Bible, {{w|Gospel of Matthew|Matthew}} v. 24
 #*:First be reconciled to thy brother, and '''then''' come and offer thy gift.
 #*{{quote-book|year=1913|author={{w|Joseph C. Lincoln}}
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
 |passage='''Then''' there came a reg'lar terror of a sou'wester same as you don't get one summer in a thousand, and blowed the shanty flat and ripped about half of the weir poles out of the sand. We spent consider'ble money getting 'em reset, and '''then''' a swordfish got into the pound and tore the nets all to slathers, right in the middle of the squiteague season.}}
 #{{label|en|sequence}} Next in order; in addition.
-#:{{usex|lang=en|There are three green ones, '''then''' a blue one.}}
+#:{{ux|en|There are three green ones, '''then''' a blue one.}}
 #*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage='''Then''' came a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps, with something of the stately pose which Richter has given his Queen Louise on the stairway, and the light of the reflector fell full upon her.}}
@@ -38,11 +38,11 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 |title=[http://www.theguardian.com/education/2013/jul/01/education-michael-gove-finland-gcse Finland spreads word on schools]
 |passage=Imagine a country where children do nothing but play until they start compulsory schooling at age seven. '''Then''', without exception, they attend comprehensives until the age of 16. Charging school fees is illegal, and so is sorting pupils into ability groups by streaming or setting.}}
 #{{label|en|conjunctive}} In that case.
-#:{{usex|lang=en|If it’s locked, '''then''' we’ll need the key.}}
-#:{{usex|lang=en|Is it 12 o'clock already? '''Then''' it's time for me to leave.}}
-#:{{usex|lang=en|You don't like potatoes? What do you want me to cook, '''then'''?}}
+#:{{ux|en|If it’s locked, '''then''' we’ll need the key.}}
+#:{{ux|en|Is it 12 o'clock already? '''Then''' it's time for me to leave.}}
+#:{{ux|en|You don't like potatoes? What do you want me to cook, '''then'''?}}
 #{{label|en|sequence}} [[at the same time|At the same time]]; [[on the other hand]].
-#:{{usex|lang=en|That’s a nice shirt, but '''then''', so is the other one.}}
+#:{{ux|en|That’s a nice shirt, but '''then''', so is the other one.}}
 #{{label|en|obsolete}} At the time that; [[when]].
 #*'''1485''', Sir {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte d'Arthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
 #*:'''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym{{nb...}}.
