--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -9,10 +9,10 @@
 * {{hyphenation|oct|il|li|on, oc|til|li|on|lang=en}}
 
 ===Numeral===
-{{head|en}}
+{{en-number}}
 
-# (''US; modern British & Australian, [[w:Long and short scales|short scale]]'') A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
-# (''dated British & Australian, [[w:Long and short scales|long scale]]'') A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
+# {{label|en|US|modern|_|British|_|&|_|Australian|[[w:Long and short scales|short scale]]}} A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
+# {{label|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 ====See also====
 * {{qualifier|short and long scale}} '''Previous''': [[septillion]]. '''Next''': [[nonillion]].
