--- a/en/o/oidium.746075.wikitext
+++ b/en/o/oidium.746075.wikitext
@@ -1,3 +1,4 @@
+{{also|Oidium}}
 ==English==
 [[File:UncinulaNecatorOnGrapes.jpg|right|thumb|Grapes affected by ''Erysiphe necator'']]
 {{wikipedia}}
