--- a/en/o/oidium.746075.wikitext
+++ b/en/o/oidium.746075.wikitext
@@ -10,7 +10,7 @@ From {{etyl|LL.|en}}, from {{etyl|grc|en}} {{term|ᾠόν||egg|lang=grc}}.
 {{en-noun|oidia}}
 
 # A fragile [[spore]] produced by some [[fungus|fungi]].
-# The [[fungus]] {{taxlink|Erysiphe necator|species|noshow=1}} (= {{taxlink|Uncinula necator|species|noshow=1}}), which produces [[grape powdery mildew]].
+# The [[fungus]] {{taxlink|Erysiphe necator|species|noshow=1}} (= {{taxlink|Uncinula necator|species|noshow=1}}), which produces {{vern|powdery mildew}} in grapes.
 
 ====Related terms====
 * [[conidium]]
