--- a/en/o/oidium.746075.wikitext
+++ b/en/o/oidium.746075.wikitext
@@ -16,7 +16,7 @@ From {{etyl|LL.|en}}, from {{etyl|grc|en}} {{term|ᾠόν||egg|lang=grc}}.
 #* '''2004''', P.D. Sharma, ''The Fungi'', [http://books.google.com.au/books?id=zBP_3V_8VnMC&pg=PA241&dq=%22oidium%22%7C%22oidia%22&hl=en&sa=X&ei=eTlKVPnIKIuE8gXqx4GIBg&redir_esc=y#v=onepage&q=%22oidium%22%7C%22oidia%22&f=false page 241],
 #*: However, in some forms mainly some Hymenomycetes it occurs by the formation of '''oidia'''. The '''oidia''' are of two main types.
 #* '''2006''', A. V. S. S. Sambamurty, ''A Textbook of Plant Pathology'', [http://books.google.com.au/books?id=x75tq4XPosoC&pg=PA239&dq=%22oidium%22%7C%22oidia%22&hl=en&sa=X&ei=eTlKVPnIKIuE8gXqx4GIBg&redir_esc=y#v=onepage&q=%22oidium%22%7C%22oidia%22&f=false page 239],
-#* Later the pods become covered completely with white powdery mass composed of mycelium, oidiophores and '''oidia''' of the fungus.
+#*: Later the pods become covered completely with white powdery mass composed of mycelium, oidiophores and '''oidia''' of the fungus.
 # The [[fungus]] {{taxlink|Erysiphe necator|species|noshow=1}} (= {{taxlink|Uncinula necator|species|noshow=1}}), which produces {{vern|powdery mildew}} in grapes.
 
 ====Coordinate terms====
