--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,7 +1,7 @@
 ==Ancient Greek==
 
 ===Etymology===
-From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{term|canis|lang=la}}, Sanskrit {{term|sc=Deva|श्वन्|tr=śván|lang=sa}} and Old English {{term|hund|lang=ang}} (English {{term|hound|lang=en}}).
+From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{term|canis|lang=la}}, Sanskrit {{term|sc=Deva|श्वन्|tr=śván|lang=sa}} and Old English {{term|hund|lang=ang}} (English {{term|hound|lang=en}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
 
 ===Pronunciation===
 {{grc-ipa-rows|kj|u'|.|oo|n}}
