--- a/en/1/1 Maccabees.801820.wikitext
+++ b/en/1/1 Maccabees.801820.wikitext
@@ -4,9 +4,14 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{context|biblical|lang=en}}  The first book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
+# {{context|biblical|lang=en}} The first book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
 
 ====Related terms====
 *[[1 Macc.]]
+
+====Translations====
+{{trans-top|first book of Maccabees}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[Category:English terms spelled with 1]]
