--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -557,7 +557,7 @@ From {{etyl|sga|gd}} {{m|sga|att}}.
 |{{l|gd|at-reum||swelling in the back of the mouth}}}}
 
 ===Verb===
-{{head|gd|verb|past|dh'at|fut=ataidh|verbal noun|at|or|atadh}}
+{{head|gd|verb|past|dh'at|future|ataidh|verbal noun|at|or|atadh}}
 
 # [[swell]], [[fester]], [[puff up]], become [[tumid]]
 
