--- a/en/a/apparent brightness.855921.wikitext
+++ b/en/a/apparent brightness.855921.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|brightness of star}}
 * Finnish: {{t|fi|näennäinen kirkkaus}}
 {{trans-mid}}
+* Russian: {{t|ru|видимый блеск|m|sc=Cyrl}}
 {{trans-bottom}}
 
 [[ta:apparent brightness]]
