--- a/en/p/pruning shears.856099.wikitext
+++ b/en/p/pruning shears.856099.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|a tool}}
+* Dutch: {{t+|nl|snoeischaar|m|f}}
 * Finnish: {{t+|fi|oksasakset|p}},  {{t+|fi|sekatöörit|p}}
 * Polish: {{t+|pl|sekator}}
 {{trans-mid}}
