--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -73,6 +73,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 {{trans-mid}}
 * Khmer: {{t+|km|កញ្ចែ|tr=kanh jeh|sc=Khmr}}
 * Korean: {{t+|ko|호각|sc=Kore}}
+* Latgalian: {{t|ltg|šviļpuks}}, {{t|ltg|šviļpaunīks}}, {{t|ltg|sveļpe }}
 * Latvian: {{t|lv|svilpe|f}}, {{t|lv|svilpe|f}}
 * Luxembourgish: {{t+|lb|Päif|f}}
 * Macedonian: {{t|mk|свирка|f|sc=Cyrl}}
