--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -142,7 +142,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * French: {{t+|fr|simple}}
 * Friulian: {{t-needed|fur}}
 * Galician: {{t|gl|simple}}, {{t|gl|sinxelo}}
-* Georgian: {{t|ka|მარტივი|tr=martivi|sc=Geor}}, {{t|ka|უბრალო|tr=ubralo|sc=Geor}}, {{t|ka|სადა|tr=sada|sc=Geor}}
+* Georgian: {{t|ka|მარტივი|tr=martivi|sc=Geor}}, {{t|ka|უბრალო|tr=ubralo|sc=Geor}}, {{t|ka|სადა|tr=sada|sc=Geor}}, {{t|ka|იოლი|sc=Geor}}
 * German: {{t+|de|einfach}}, {{t+|de|simpel}}
 * Greek: {{t+|el|απλός|tr=aplós}}
 * Gujarati: {{t-needed|gu}}
