--- a/en/h/hi there.742282.wikitext
+++ b/en/h/hi there.742282.wikitext
@@ -5,4 +5,7 @@
 
 # An informal [[greeting]].
 
-[[Category:en:Greetings]]
+[[Category:en:Greetings
+
+ITS IN THE FORM OF HI THERE THE END
+GO GEORGIA TECH TO HELL WITH GEORGIA
