--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -91,6 +91,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Hungarian: {{t+|hu|súly}}
 * Ido: {{t+|io|pezo}}
 {{trans-mid}}
+* Irish: {{t|ga|meáchan|m}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}})
