--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -17,9 +17,10 @@
 *: Cantonese: {{t|yue|撒母耳記下|sc=Hani}}, {{t|yue|撒母耳记下|tr=saat3 mou5 ji5 gei3 haa6|sc=Hani}}, {{t|yue|撒慕爾紀下|sc=Hani}}, {{t|yue|撒慕尔纪下|tr=saat3 mou6 ji5 gei2 haa6|sc=Hani}} {{qualifier|Catholic}}
 *: Mandarin: {{t+|cmn|撒母耳記下|sc=Hani}}, {{t+|cmn|撒母耳记下|tr=Sǎmǔ'ěrjì Xià|sc=Hani}}, {{t|cmn|撒慕爾紀下|sc=Hani}}, {{t|cmn|撒慕尔纪下|tr=Sǎmù'ěrjì Xià|sc=Hani}} {{qualifier|Catholic}}
 *: Min Nan: {{t|nan|撒母耳記下卷|sc=Hani}}, {{t|nan|撒母耳记下卷|tr=Sat-bó͘-ní Kì Hā-koàn, Sat-bó͘-jí Kì Hā-koàn|sc=Hani}}, {{t|nan|撒母耳記下|sc=Hani}}, {{t|nan|撒母耳记下|tr=Sat-bó͘-ní Kì Hā, Sat-bó͘-jí Kì Hā|sc=Hani}}, {{t|nan|撒慕爾紀下}}, {{t|nan|撒慕尔纪下|tr=Sat-bō͘-ní-kí hā}} {{qualifier|Catholic}}
+* French: {{t|fr|2 Samuel}}
 * German: {{t|de|2 Samuel}}
-* Greek: {{t|el|Β' Σαμουήλ}}
 {{trans-mid}}
+* Greek: {{t|el|Β' Σαμουήλ}}
 * Irish: {{t|ga|Dara Leabhar Shamúéil|m}}, {{t|ga|2 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記下|tr=samueru kige|sc=Jpan}}
 {{trans-bottom}}
