--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -34,7 +34,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Polish: {{t+|pl|hazard|m}}
 * Portuguese: {{t|pt|aposta|f}}
 * Russian: {{t+|ru|азартная игра|f|tr=azártnaja igrá|sc=Cyrl}}, {{t+|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
-* Spanish: {{t+|es|jugada}}
+* Spanish: {{t+|es|apuesta}}
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
